# OpenGL-tests

./: .gitignore  CMakeLists.txt  Makefile  OpenGL-tests.sln  main.cpp
native/: .gitignore  native.vcxproj  native.vcxproj.filters
native/res/shaders/: basic.shader
native/src/: application.cpp  index_buffer.cpp  index_buffer.h  legacy_tryangles.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  shader_assembler.hpp  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer_layout.hpp
res/shaders/: basic.shader
src/: application.cc  application.cpp  index_buffer.cpp  legacy_tryangles.cc  renderer.h  shader_assembler.h  shader_assembler.hh  shader_assembler.hpp  vertex_array.cc  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.hh  vertex_buffer_layout.hpp
